# flask-workshop-espe

./: .env.sample  README.md  app.py  database.py  forms.py  models.py  pyproject.toml  settings.py
templates/: add-task.html  base.html  home.html  list.html
